--- a/app.css
+++ b/app.css
@@ -263,17 +263,17 @@
     animation-fill-mode: both
   }
   
-  @media (print),
-  (prefers-reduced-motion:reduce) {
-    .ft-menu {
-      -webkit-animation-duration: 1ms !important;
-      animation-duration: 1ms !important;
-      -webkit-transition-duration: 1ms !important;
-      transition-duration: 1ms !important;
-      -webkit-animation-iteration-count: 1 !important;
-      animation-iteration-count: 1 !important
-    }
-  }
+  /*@media (print),*/
+  /*(prefers-reduced-motion:reduce) {*/
+  /*  .ft-menu {*/
+  /*    -webkit-animation-duration: 1ms !important;*/
+  /*    animation-duration: 1ms !important;*/
+  /*    -webkit-transition-duration: 1ms !important;*/
+  /*    transition-duration: 1ms !important;*/
+  /*    -webkit-animation-iteration-count: 1 !important;*/
+  /*    animation-iteration-count: 1 !important*/
+  /*  }*/
+  /*}*/
   
   .ft-menu .hero-nav__item {
     width: 100%;
